# libremoteserver

./: .gitignore  CMakeLists.txt  README.md
include/FFmpeg/libavutil/: ffversion.h
include/FFmpeg/libswscale/libavutil/: ffversion.h
include/Razor/: sim_external.h
include/live555/BasicUsageEnvironment/: BasicUsageEnvironment_version.hh
include/live555/UsageEnvironment/: UsageEnvironment_version.hh
include/live555/groupsock/: GroupsockHelper.hh  NetAddress.hh  groupsock_version.hh
include/live555/liveMedia/: BufferQueue.hpp  H264LiveVideoSource.hh  liveMedia.hh  liveMedia_version.hh
lib/FFmpeg/: libavdevice.so.58.9.101  libavdevice.so.59.0.100  libavfilter.so.7.69.101  libavfilter.so.8  libavformat.so.58.35.101  libavformat.so.59  libavutil.so.56  libavutil.so.57.0.100  libfdk-aac.so.1  libpostproc.so.55.6.100  libpostproc.so.56.0.100  libswresample.so.3  libswresample.so.4.0.100  libswscale.so.5.6.100  libswscale.so.6
lib/Live555/: libBasicUsageEnvironment.so.1.0.1  libUsageEnvironment.so.3.1.0  libgroupsock.so.30  libgroupsock.so.30.0.4  libliveMedia.so.94  libliveMedia.so.94.0.3
src/: CMakeLists.txt
src/Base/BufferQueue/: BufferQueue.hpp
src/Base/BufferStream/: BufferStream.hpp
src/Base/Logger/: Logger.cpp  Logger.h
src/Base/TaskSchduler/: ThreadPool.hpp
src/Base/TaskScheduler/: TaskScheduler.h  ThreadPool.hpp
src/Rtsp/: H264LiveVideoSource.cpp  H264LiveVideoSource.hh  H264VideoLiveServerMediaSubsession.cpp  H264VideoLiveServerMediaSubsession.hh
src/Rtsp/Live555/: H264VideoLiveServerMediaSubsession.cpp
src/VideoCapture/: VideoCapture.cpp  VideoCapture.h  VideoCaptureFactory.h  VideoCaptureX11Factory.h  X11DesktopCapture.cpp  X11DesktopCapture.h
src/VideoEncoder/: VideoEncoder.cpp  VideoEncoder.h  VideoEncoderFFmpeg.cpp  VideoEncoderFFmpeg.h  VideoEncoderFFmpegFactory.h  VideoEncoderFactory.h
tests/: CMakeLists.txt
tests/LoggerTest/: CMakeLists.txt  LoggerTest.cpp
tests/MiscTest/: CMakeLists.txt  ThreadPoolTest.cpp
tests/VideoTest/: CMakeLists.txt  FFmepgVideoEncoderTest.cpp  TestLive555.cpp  X11VideoCaptureTest.cpp  sdl_play.cpp  sim_sender_test.cpp
